# aesthetix

./: .gitignore  CMakeLists.txt  README.md
scripts/: format.sh
src/: main.cpp
src/core/: color.cpp  color.hpp  image_loader.cpp  image_loader.hpp  plugin.cpp  plugin.hpp  plugin_loader.cpp  plugin_loader.hpp
src/state/: app_state.cpp  app_state.hpp
src/tui/: app.cpp  app.hpp  color_grid.cpp  color_grid.hpp  color_roles_list.cpp  color_roles_list.hpp  plugin_list.cpp  plugin_list.hpp  save_button.cpp  save_button.hpp
src/utils/: paths.cpp  paths.hpp
